# co-compose

./: README.md  example_server.py
server/: example.py  pyproject.toml
server/co_compose/: __init__.py  server.py
server/music_gen_server/: server.py
sfs_server/: main.py
ui/: package-lock.json  package.json
ui/src/: App.vue  api.ts
