
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "co-compose"
version = "0.1.0"
authors = [
    {name = "Ping-Yi Chen", email = "a931eric@gmail.com"},
]
description = "A python server for project co-compose"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "uvicorn~=0.34.3",
    "fastapi~=0.115.12",
]

